adicao do consign

--- a/exemplo1/app/views/noticias/noticia.ejs
+++ b/exemplo1/app/views/noticias/noticia.ejs
@@ -2,11 +2,29 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Portal de notícias</title>
+			<title>NotÃ­cia</title>
 		</head>
 	<body>
 
-		<h1>Notícia</h1>
+		<h1>NotÃ­cias</h1>
+
+
+		<table>
+			<tr>
+				<th>id</th>
+				<th>Titulo</th>
+				<th>Noticia</th>
+				<th>Criacao</th>
+			</tr>
+				<tr>
+						<td><%= noticias[0].id_noticia %></td>
+						<td><%= noticias[0].titulo %> </td>
+						<td><%= noticias[0].noticia %> </td>
+						<td><%= noticias[0].data_criacao %> </td>
+					</tr>
+
+
+		</table>
 
 	</body>
 </html>
