--- a/multiroomChat/app/views/chat.ejs
+++ b/multiroomChat/app/views/chat.ejs
@@ -123,17 +123,21 @@
 					+'<p>'+data.mensagem+'</p>'
 				  +'</div>';
 
-					$("#dialogos").append(html);
+				$("#dialogos").append(html);
+
+				window.scrollTo(0,document.body.scrollHeight);
 
 			});
 
 			socket.on('participantesParaCliente',function(data) {
 
-				var html = '<span class="participante">'
-					+'<img src="images/ico_usuario.png" />'+data.apelido+'</span>';
+				if ($("#pessoas span:contains("+data.apelido+")").length == 0){
 
+					var html = '<img src="images/ico_usuario.png" />'
+						+'<span class="participante">'+data.apelido+'</span>';
 					$("#pessoas").append(html);
-
+				
+				}
 			});
 
 
